--- a/clientes.ipynb
+++ b/clientes.ipynb
@@ -359,10 +359,9 @@
     "        cursor = con.cursor()\n",
     "        \n",
     "        cursor.execute(\n",
-    "            \"insert into aquapark.cliente (cpf, nome, data_nascimento, email, rua, cidade, estado, cep)\"\n",
-    "            \"values (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\",\n",
-    "            (cpf.value_input, nome.value_input, data_nascimento.value_input, email.value,\n",
-    "             rua.value_input, cidade.value_input, estado.value_input, cep.value_input)\n",
+    "        \"insert into aquapark.cliente (cpf, nome, data_nascimento, email, rua, cidade, estado, cep) \"\n",
+    "        \"values (%s, %s, %s, %s, %s, %s, %s, %s)\",\n",
+    "        (cpf.value_input, nome.value_input, data_nascimento.value, email.value, rua.value_input, cidade.value_input, estado.value_input, cep.value_input)\n",
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
